edit: delete jserv quote

--- a/_posts/2025-09-13-作業系統.md
+++ b/_posts/2025-09-13-作業系統.md
@@ -81,7 +81,7 @@ _Summary of Address Translation. Source: https://csapp.cs.cmu.edu/3e/ics3/vm/cor
 
 這些狀態會不斷轉換：一個程序從就緒變為執行，可能因時間片用完而回到就緒，或因發起 I/O 請求而進入等待，待 I/O 完成後再回到就緒，最終執行完畢而結束。
 
-> 宅色夫：「你看，他媽你們作業系統花了這麼多篇幅介紹排班器，結果真的在核心裡面，排班器佔的程式碼不到 1%」
+> 「你看，他媽你們作業系統花了這麼多篇幅介紹排班器，結果真的在核心裡面，排班器佔的程式碼不到 1%」
 {: .prompt-info }
 
 ## 持久化
