edit: change the title

--- a/_posts/2025-09-13-作業系統.md
+++ b/_posts/2025-09-13-作業系統.md
@@ -1,9 +1,12 @@
 ---
 layout: post
-title: 作業系統核心功能：虛擬化、並行與持久化
+title: 作業系統，虛擬化、並行與持久化
 date: 2025-09-13 22:21 +0800
-tag: [作業系統, 摘要]
-categories: [作業系統]
+tag:
+  - 作業系統
+  - 摘要
+categories:
+  - 作業系統
 description: 深入解析作業系統如何管理電腦資源，讓多個程式順暢地同時運行。
 ---
 
