edit: revise description

--- a/_posts/2025-09-23-信仰.md
+++ b/_posts/2025-09-23-信仰.md
@@ -6,6 +6,7 @@ tag:
 - 信仰
 categories:
 - 自言自語
+description: 支撐我們完成「不可能的任務」的奇妙東西
 ---
 行為定義角色，但許多人因為自己「不是這個角色」而不去做這件事。舉個例子，一個人因為在聖誕節送了許多陌生人禮物，而被稱是「聖誕老人」。然而許多人僅僅因為不是聖誕老人，而就不去送禮物，更甚至因為他們不是聖誕老人，而覺得自己「沒資格」送禮物。這是最可怕的。
 
