edit: revise noun

--- a/_posts/2025-09-13-作業系統.md
+++ b/_posts/2025-09-13-作業系統.md
@@ -74,7 +74,7 @@ _Summary of Address Translation. Source: https://csapp.cs.cmu.edu/3e/ics3/vm/cor
 *   先進先出（First-Come, First-Served, FCFS）：最單純的演算法，如同排隊，先來的程序先執行。缺點是若一個長時間的程序先來，後面的短程序就必須漫長等待。
 *   最短工作優先（Shortest Job First, SJF）：優先執行預估執行時間最短的程序，能有效降低平均等待時間。
 *   優先權排程（Priority Scheduling）：為每個程序指定一個優先權，優先權最高的先執行。為避免低優先權的程序永遠等不到 CPU（稱為飢餓 Starvation），通常會搭配「老化」（Aging）機制，逐漸提升等待已久程序的優先權。
-*   循環分配（Round Robin, RR）：每個程序被給予一個固定的時間片，時間一到就換下一個程序，非常適合分時系統。
+*   循環法（Round Robin, RR）：每個程序被給予一個固定的時間片，時間一到就換下一個程序，非常適合分時系統。
 
 為了有效管理，作業系統會將處理程序劃分為三種主要狀態：
 
@@ -94,7 +94,7 @@ _Summary of Address Translation. Source: https://csapp.cs.cmu.edu/3e/ics3/vm/cor
 具體來說，一個寫入檔案的動作大致包含以下步驟：
 
 1.  使用者應用程式（例如文字編輯器）透過系統呼叫 `write`，向作業系統核心發出寫入請求，並提供檔案描述符、資料內容與長度等資訊。
-2. 作業系統的檔案系統接收到請求後，會先讀取該檔案的元資料（Metadata，例如 i-node），檢查權限、檔案大小等資訊，並在磁碟上找到可用的資料區塊（Data Block）來存放新的資料。
+2. 作業系統的檔案系統接收到請求後，會先讀取該檔案的元資料（Metadata，例如 i-node），檢查權限、檔案大小等資訊，並在磁碟上找到可用的資料塊（Data Block）來存放新的資料。
 3. 檔案系統將「將資料寫入某個邏輯區塊」這個高階指令，交給對應的儲存裝置驅動程式。驅動程式會將此指令翻譯成一連串該硬體裝置控制器（Device Controller）能理解的低階指令（例如，移動磁頭到某個磁軌、啟動寫入等）。
 4. 裝置控制器接收到指令後，便會直接操作硬體，將資料真正寫入到磁碟的實體位置上。
 
@@ -102,7 +102,8 @@ _Summary of Address Translation. Source: https://csapp.cs.cmu.edu/3e/ics3/vm/cor
 
 ---
 
-# 參考書目
+# 參考資料
 1. Randal E. Bryant and David R. O'Hallaron. _Computer Systems: A Programmer's Perspective, 3/e_. Prentice Hall, 2015.
 2. Remzi H. Arpaci-Dusseau and Andrea C. Arpaci-Dusseau. _Operating Systems: Three Easy Pieces_.
 3. Abraham Silberschatz, Peter B. Galvin, and Greg Gagne. _Operating System Concepts, 10th Edition_. Wiley, 2021.
+4. [樂詞網](https://terms.naer.edu.tw/)
