edit: small detail

--- a/_posts/2025-09-23-信仰.md
+++ b/_posts/2025-09-23-信仰.md
@@ -12,7 +12,7 @@ description: 支撐我們完成「不可能的任務」的奇妙東西
 
 我們常常因為不具備某個「角色身份」而限制自己的行為，更甚至認為自己沒資格。而信仰能夠支撐我們做「現階段看似不可能的事情」，這也許就是"fake it till you make it"的精神吧。偶像大概也是這麼一回事？但有些偶像倒是有點《女歌手約瑟芬或老鼠民族》的味道。
 
-我是不是也該找點自己的信仰？~~我以前的信仰都是我們班上名列前茅的女同學，看著他們認真我也會想跟著認真讀書~~，但這理由自從高中後就實在行不通，甚至有點噁心，該找點別的了。Linus Torvalds？不，我覺得他就是個「很自私」的開發者而已。Kurt Cobain？不，我還是不要成為他好了... 不被旁人理解，被理解又覺得很難受的感覺真的不好，我也會這樣。
+我是不是也該找點自己的信仰？~~我以前的信仰都是我們班上名列前茅的女同學，看著他們認真我也會想跟著認真讀書~~，但這理由自從高中後就實在行不通，甚至有點噁心，該找點別的了。Linus Torvalds？不，我覺得他就是個「很自私」的開發者而已。Kurt Cobain？不，我還是不要成為他好了...
 
 不如我先想想我想做到哪些事情好了。
 
@@ -20,7 +20,7 @@ description: 支撐我們完成「不可能的任務」的奇妙東西
 
 > 印象最深刻的大概就是[SkyWude的翻譯天空](https://www.youtube.com/@skywudefortranslate)和那些[遊戲理論系列](https://www.youtube.com/watch?v=NKbZcXR8_LQ&list=PLk99qMkCrY5FlgiZ8lX8_sM000uT_qPd5)的翻譯影片了吧
 
-雖然圈子有些不同，但現在我想當別人「迷途路上的引路人」。不是真的帶著引路的目的，只是當有人覺得不被理解、和社會疏離時，我可以用我的文字告訴他：「嘿！這裡曾經也有人！你不是孤單的！」
+雖然圈子有些不同，但現在我想當別人「迷途路上的引路人」。不是真的帶著引路的目的，只是當有人覺得不被理解、和社會疏離時，我留下的文字可以告訴他：「嘿！你不是邊緣人，這裡曾經也有人，你不是孤單的！」
 
 可能有點中二、又有點自大、還有點天真，但誰管他的呢，笑死。
 
