Edit: post cover

--- a/_posts/2025-10-24-價值觀.md
+++ b/_posts/2025-10-24-價值觀.md
@@ -7,6 +7,7 @@ tag:
   - 價值觀
 categories:
   - 自言自語
+image:
 ---
 關於怎麼篩選價值觀，我覺得很像在野外判斷蘑菇能不能吃，你當然有很多種方法。比如查資料研究別人的結果、觀察吃了同種蘑菇的人後來有甚麼反應、稍微切一小塊放到舌頭上、或是捏著懶覺直接吃下去，反正自己的最終反應才是最真實的。
 
